# stock_13f

./: .gitignore  AGENTS.md  BACKLOG.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app_pages/: dashboard.py  eightk.py  managers.py  quarterly_movers.py  reports.py  thirteendg.py  thirteenf.py
config/: backend_schedule.toml
data/: cusip_ticker_map.csv  sec_company_tickers.json  sec_company_tickers_exchange.json
reports/: 2026-07-03-backend-smoke-validation.md  2026-07-03-database-sync-status.md  2026-07-03-sync-13f-supabase-rerun.md  2026-07-06-backend-schedule-timeout-crash.md  2026-07-08-coatue-manager-update.md
scripts/: analyze_13f_quarterly_ai_rotation.py  backend_schedule.py  backend_sync.py  enrich_cusip_ticker_map_openfigi.py  export_13f_quarterly_rebalance_csv.py  monitor_13f_ai.py
sql/: 0001_backend_sync_schema.sql  0002_manager_rebalance_marts.sql  0003_13dg_manager_sync.sql  0004_manager_security_latest_mart.sql  0004_sync_checkpoints.sql
tests/: test_backend_orchestrator.py  test_backend_schedule_service.py  test_backend_sync_cli.py  test_checkpoints.py  test_edgar_runtime.py  test_edgartools_client.py  test_eightk_sync_service.py  test_enrich_cusip_ticker_map_openfigi.py  test_export_13f_quarterly_rebalance_csv.py  test_manager_registry.py  test_openfigi_enrichment.py  test_security_identifiers.py  test_security_universe.py  test_structured_13f_dataset.py  test_supabase.py  test_thirteendg_sync_service.py  test_thirteenf_sync_service.py  test_ticker_backfill_service.py  test_ui_data_access.py  test_ui_formatters.py  (+1 more)
(+78 files in other folders)
