[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-13f"
version = "0.1.0"
description = "Standalone project for full-universe 13F quarterly rebalance exports and AI-focused reports."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Scott Li" }
]
dependencies = [
  "edgartools>=4.20.2",
  "filelock>=3.16.1",
  "pandas>=2.2.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
  "schedule>=1.2.2",
  "streamlit>=1.46.0",
  "structlog>=24.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
